# ntd_audio

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATE.md  DESIGN.md  LICENSE  Makefile  PERFORMANCE_NOTES.md  README.md  README.vi.md  ROADMAP_4_WEEKS.md  SCHEMA.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.kokoro.yml  docker-compose.oss.yml  docker-compose.piper.yml  docker-compose.prod.yml  docker-compose.vieneu.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260424_0001_initial.py  20260424_0002_project_rows.py  20260424_0003_app_settings.py  20260424_0004_speaker_label.py
backend/src/voiceforge/: api_router.py  config.py  db.py  enums.py  events_bus.py  logging_setup.py  main.py  models.py  observability.py  provider_registry.py  providers_azure_speech.py  providers_base.py  providers_elevenlabs.py  providers_google_tts.py  providers_kokoro.py  providers_openai_tts.py  providers_params.py  providers_piper.py  providers_vieneu_tts.py  providers_voicevox.py  rate_limit.py  routes_catalog.py  routes_events.py  routes_health.py  routes_jobs.py  routes_monitor.py  routes_project_rows.py  routes_projects.py  routes_providers.py  routes_retention.py  routes_settings.py  routes_system.py  runtime_settings.py  schemas.py  services_app_settings.py  services_bulk_import.py  services_catalog.py  services_jobs.py  services_monitor.py  services_project_export.py  (+11 more)
backend/src/voiceforge/security/: api_key.py  encryption.py
backend/src/voiceforge/services/: storage.py
backend/tests/: conftest.py  test_api_key.py  test_app_settings_encryption.py  test_bulk_import.py  test_config.py  test_encryption.py  test_epic4_observability.py  test_jobs_lifecycle.py  test_preview.py  test_project_export.py  test_provider_concurrency.py  test_provider_plugins.py  test_providers_params.py  test_reaper.py  test_retention.py  test_storage_wiring.py  test_subtitles.py  test_system_capabilities.py
docs/: README.md  README.vi.md
frontend/: .prettierignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: bump_version.ps1  bump_version.sh  db_backup.ps1  db_backup.sh  db_restore.ps1  db_restore.sh  run_backend.sh  run_frontend.sh  run_worker.sh
(+73 files in other folders)
